Keyboard shortcuts support
Added keyboard shortcut supports, both global and focused. Some simple shortcut are already available: skip, pause, fast-forward, and open settings.